--- a/apps/home/templates/authenticated-home.html
+++ b/apps/home/templates/authenticated-home.html
@@ -29,7 +29,7 @@
     <div class="row">
         <div class="col-lg-12">
 		  
-		  <a href="{% url 'oauth2_provider:list' %}" ><button type="button" class="btn btn-success">Applications</button></a>
+		Hello World
 		 </div>
 	   </div>
 	
