--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,8 @@
 
 	{% load i18n %}
         <title>
-        {% block pretitle %} {% trans "oAuth2 Server" %} {%  endblock %} | 
-        {% block title %} {% trans "Sample" %} {% endblock %}
+        {% block pretitle %} {% trans "oAuth2 Client " %} {%  endblock %} | 
+        {% block title %} {% trans "Example" %} {% endblock %}
         </title>
 	
     {% block head %}
