--- a/apps/home/templates/authenticated-home.html
+++ b/apps/home/templates/authenticated-home.html
@@ -29,7 +29,10 @@
     <div class="row">
         <div class="col-lg-12">
 		  
-		Hello World
+		<a href="/remote/api/call-read"><button type="button" class="btn btn-primary">Call Read</button> </a>
+		<a href="/remote/api/call-write"><button type="button" class="btn btn-primary">Call Write</button> </a>
+		
+		
 		 </div>
 	   </div>
 	
