--- a/templates/include/top-nav.html
+++ b/templates/include/top-nav.html
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">HHS oAuth2 Client Example</a>
+          <a class="navbar-brand" href="/">CMS oAuth2 Client Example</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -30,7 +30,7 @@
              <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url 'social:begin' 'myoauth' %}">Login with My oAuth</a></li>
+                <li><a href="{% url 'social:begin' 'myoauth' %}">Login with Your CMS Credentials</a></li>
               </ul>
             </li>
 
