--- a/apps/home/templates/authenticated-home.html
+++ b/apps/home/templates/authenticated-home.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load bootstrap %}
 {% block Content %}
 
 <div class="container">
@@ -9,15 +10,15 @@
          <h1 class="page-header">Hello {{user|capfirst}}</h1>
       </div>
     </div>
-      
+
 
     <div class="row">
       <div class="col-lg-10">
         {% include "include/messages.html" %}
       </div>
     </div>
- 
-	  
+
+
       <div class="row">
         <div class="col-lg-12">
 	      <ol class="breadcrumb">
@@ -25,23 +26,27 @@
 	      </ol>
         </div>
       </div>
-    
+
     <div class="row">
         <div class="col-lg-12">
-		  
-		<a href="/remote/api/call-read"><button type="button" class="btn btn-primary">Call Read</button> </a>
-		<a href="/remote/api/call-write"><button type="button" class="btn btn-primary">Call Write</button> </a>
-		
-		
+            <a href="{% url "call_read" %}"><button type="button" class="btn btn-primary">Call Read</button> </a>
+
+            <form method="post" action="{% url "call_write" %}">
+                {% csrf_token %}
+                {{ form|bootstrap }}
+                <button type="submit" class="btn btn-primary">Call Write</button>
+            </form>
+
 		 </div>
 	   </div>
-	
-	  
-    
- 
 
+       <div class="col-lg-12">
+           <h2>Remote Response</h2>
+           {% if remote_status_code %}<p>Status Code: {{ remote_status_code }}</p>{% endif %}
+           {{ remote_content|default:"No response" }}
+       </div>
     </div><!-- /.container -->
 
-  
+
 {% endblock %}
 
