Adding patient and provider demos - still a work in progress

--- a/templates/include/top-nav.html
+++ b/templates/include/top-nav.html
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">CMS oAuth2 Client Example</a>
+          <a class="navbar-brand" href="/">oAuth2 Client Example</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
