--- a/apps/accounts/templates/login.html
+++ b/apps/accounts/templates/login.html
@@ -5,22 +5,27 @@
 
   <div class="container">
     
-    <div class="hero-unit">
-	  
-	  <div class="row">
-		<div class="col-lg-8">
-		  {% include "include/messages.html" %}    
-		</div>
+	    <div class="row">
+        <div class="col-lg-12">
+	      <ol class="breadcrumb">
+	        <li class="active"><a href="">Login</a></li>
+	      </ol>
+        </div>
+     </div>
+
+    <div class="row">
+      <div class="col-lg-10">
+        {% include "include/messages.html" %}
       </div>
-	  
-	  
-    <h1>{% trans "Login" %}  <a  class="btn btn-primary btn-large" href="{% url 'social:begin' 'myoauth' %}">Login with Your CMS Credentials</a></h1>
-
-
-     </div> 
-    
-	
     </div>
+	  
+     <div class="row text-center">
+        <div class="col-lg-12">
+           <a class="btn btn-primary btn-large" href="{% url 'social:begin' 'myoauth' %}">Login with {{PROPRIETARY_BACKEND_NAME}}</a>
+		</div>
+	  </div>
+	
+</div>
 	
 {% endblock %}
 
