--- a/apps/provider/templates/response.html
+++ b/apps/provider/templates/response.html
@@ -20,7 +20,7 @@
     </div>
 
 
-    <div class="row text-center">
+    <div class="row">
         <div class="col-lg-12">
 
           <pre>{{remote_content}}</pre>                
