--- a/apps/home/templates/authenticated-home.html
+++ b/apps/home/templates/authenticated-home.html
@@ -31,26 +31,28 @@
         <div class="col-lg-12">
             
 			
-			 <a href="/patient/cms/pull/me"><button type="button" class="btn btn-primary">Get My Personal Health Data</button> </a>
+			 <!-- <a href="/patient/cms/pull/me"><button type="button" class="btn btn-primary">Get My Personal Health Data</button> </a>--> 
 		     <a href="/provider/fhir/push"><button type="button" class="btn btn-primary">Push Practitioner FHIR</button> </a>
 		     <a href="/provider/pjson/push"><button type="button" class="btn btn-primary">Push Provider JSON</button> </a>
 			
-			<a href="{% url "call_read" %}"><button type="button" class="btn btn-primary">Call Read</button> </a>
-
+			<!--<a href="{% url "call_read" %}"><button type="button" class="btn btn-primary">Call Read</button> </a>--> 
+			
+			<!--
             <form method="post" action="{% url "call_write" %}">
                 {% csrf_token %}
                 {{ form|bootstrap }}
                 <button type="submit" class="btn btn-primary">Call Write</button>
             </form>
-
+			-->
 		 </div>
 	   </div>
-
+ <!--
        <div class="col-lg-12">
            <h2>Remote Response</h2>
            {% if remote_status_code %}<p>Status Code: {{ remote_status_code }}</p>{% endif %}
            {{ remote_content|default:"No response" }}
        </div>
+-->
     </div><!-- /.container -->
 
 
