--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,10 +1,10 @@
 {% extends "admin/base.html" %}
 {% load i18n %}
 
-{% block title %}{{ title }} | {% trans 'oAuth2 Client Example Administration' %}{% endblock %}
+{% block title %}{{ title }} | {% trans 'OAuth2 Client Example Administration' %}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name">{% trans 'oAuth2 Client Example Administration' %}</h1>
+<h1 id="site-name">{% trans 'OAuth2 Client Example Administration' %}</h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
