--- a/templates/include/top-nav.html
+++ b/templates/include/top-nav.html
@@ -8,16 +8,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">oAuth2 Client Example</a>
+          <a class="navbar-brand" href="/">OAuth2 Client Example</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-right">
-            
+
             {% if user.is_authenticated %}
-             
-             
+
+
              <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user }} <b class="caret"></b></a>
               <ul class="dropdown-menu">
