--- a/apps/home/templates/authenticated-home.html
+++ b/apps/home/templates/authenticated-home.html
@@ -31,7 +31,9 @@
         <div class="col-lg-12">
 
 
-			 <!-- <a href="/patient/cms/pull/me"><button type="button" class="btn btn-primary">Get My Personal Health Data</button> </a>-->
+			<a href="/patient/cms/pull/me"><button type="button" class="btn btn-primary">Get My Personal Health Data</button> </a>
+		  
+		   <a href="/provider/fetch-practitioner"><button type="button" class="btn btn-primary">Fetch Practitioner for Update</button> </a>
 		     <a href="/provider/fhir/practitioner/update"><button type="button" class="btn btn-primary">Update Practitioner FHIR</button> </a>
          <a href="/provider/fhir/practitioner/push"><button type="button" class="btn btn-primary">Create New Practitioner FHIR</button> </a>
          <a href="/provider/fhir/organization/update"><button type="button" class="btn btn-primary">Update Organization FHIR</button> </a>
