--- a/apps/provider/templates/practitioner-form.html
+++ b/apps/provider/templates/practitioner-form.html
@@ -12,7 +12,7 @@
         </div>
 
       </div>
-	  
+
 	  <div class="row">
 
         <div class="col-lg-12">
@@ -20,13 +20,13 @@
         </div>
 
       </div>
-	  
+
 
       <div class="row">
 
         <div class="col-lg-12">
-	  
-	
+
+
 
   {% if additional_info %}
     <div class="alert alert-block">
@@ -36,23 +36,23 @@
     </div>
 
   {% endif %}
- 
+
 <div class="row">
-  
+
     <div class="col-lg-8">
       {% include "include/messages.html" %}
 
-	  
-	  
+
+
       <form class="well" method="post" action="" enctype="multipart/form-data">
         {% csrf_token %}
-        
+
 	{% load bootstrap %}
 	{{ form|bootstrap }}
-        
+
 	<input type="submit" class="btn btn-default btn-large"  value="{% trans 'Save Demographic Data' %}" /><br>
 	<a href="javascript:history.go(-1)">{% trans "Go Back" %}</a>
-      
+
       </form>
     </div>
 
@@ -63,40 +63,57 @@
            <div class="row">
 
         <div class="col-lg-12">
-		  
+
 		  Addresses: <a href="/provider/address/create/{{npi}}"><button type="button" class="btn btn-default">Create</button> </a>
 		  <ul>
 		  {% for a in addresses %}
 		      <li>{{a}} <a href="/provider/address/update/{{a.id}}"><button type="button" class="btn btn-default">Edit</button> </a>
 			  <a href="/provider/address/delete/{{a.id}}"><button type="button" class="btn btn-default">Delete</button> </a>
-			  
+
 			  </li>
 		  {% endfor %}
           </ul>
-		  
-		  
+
+
         </div>
 
       </div>
-		   
-		   
+
+      <div class="row">
+
+   <div class="col-lg-12">
+
+ Affiliations: <a href="/provider/affiliation/create/{{npi}}"><button type="button" class="btn btn-default">Create</button> </a>
+ <ul>
+ {% for a in affiliations %}
+     <li>{{a}} <a href="/provider/affiliation/update/{{a.id}}"><button type="button" class="btn btn-default">Edit</button> </a>
+   <a href="/provider/affiliation/delete/{{a.id}}"><button type="button" class="btn btn-default">Delete</button> </a>
+
+   </li>
+ {% endfor %}
+     </ul>
+
+
+   </div>
+
+ </div>
+
+
 	  <div class="row">
 
         <div class="col-lg-12">
 		  When changes are completed, click this button.<br>
 		<a href="/provider/submit-to-fhir-server/{{npi}}"><button type="button" class="btn btn-primary">Submit to FHIR Server</button>
-		  
+
 		</div>
 
-      </div>	
-		
-		
-		   
+      </div>
+
+
+
 
     </div><!-- /.container -->
 
-  
+
 
 {% endblock %}
-
-
