--- a/apps/accounts/templates/login.html
+++ b/apps/accounts/templates/login.html
@@ -21,7 +21,7 @@
 	  
      <div class="row text-center">
         <div class="col-lg-12">
-           <a class="btn btn-primary btn-large" href="{% url 'social:begin' 'myoauth' %}">Login with {{PROPRIETARY_BACKEND_NAME}}</a>
+           <a class="btn btn-primary btn-large" href="{% url 'social:begin' 'myoauth' %}">Login with {{PROPRIETARY_BACKEND_NAME}}.oauth2.io</a>
 		</div>
 	  </div>
 	
